force-app/main/default/objects/BV_Case__c.object
<CustomObject>
    <fields>
        <fullName>Balance_at_date_of_death__c</fullName>
        <label>Balance at date of death</label>
        <precision>16</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Current_balance__c</fullName>
        <label>Current balance</label>
        <precision>16</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Deceased_date_of_birth__c</fullName>
        <label>Deceased date of birth</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Deceased_date_of_death__c</fullName>
        <label>Deceased date of death</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Deceased_did_not_leave_valid_will__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Deceased did not leave valid will</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Deceased_last_known_address__c</fullName>
        <label>Deceased last known address</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Deceased_lived_in_England_Wales__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Deceased lived in England/Wales</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Deceased_martial_status__c</fullName>
        <label>Deceased marital status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Single</fullName>
                </value>
                <value>
                    <fullName>Married</fullName>
                </value>
                <value>
                    <fullName>Civil Partnership</fullName>
                </value>
                <value>
                    <fullName>Divorced</fullName>
                </value>
                <value>
                    <fullName>Widowed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Deceased_name__c</fullName>
        <label>Deceased name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Deceased_other_known_addresses__c</fullName>
        <label>Deceased other known addresses</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Deceased_other_names__c</fullName>
        <label>Deceased other names</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Deceased_owned_this_property__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Deceased owned this property</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Deceased_place_of_birth__c</fullName>
        <label>Deceased place of birth</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Funeral_expanses_paid__c</fullName>
        <label>Funeral expenses paid</label>
        <precision>16</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Funeral_expenses_paid_from_account__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Funeral expenses paid from account</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Informant_email_address__c</fullName>
        <label>Informant email address</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Informant_first_name__c</fullName>
        <label>Informant first name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Informant_last_name__c</fullName>
        <label>Informant last name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Informant_mailing_city_town__c</fullName>
        <label>Informant mailing city/town</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Informant_mailing_country__c</fullName>
        <label>Informant mailing country</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Informant_mailing_county__c</fullName>
        <label>Informant mailing county</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Informant_mailing_postal_code__c</fullName>
        <label>Informant mailing postal code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Informant_mailing_street__c</fullName>
        <label>Informant mailing street</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Informant_telephone_number__c</fullName>
        <label>Informant telephone number</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Net_estate_over500__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Net estate over £500</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>No_grant_issued_for_estate__c</fullName>
        <defaultValue>false</defaultValue>
        <label>No grant issued for estate</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>No_known_entitled_relatives__c</fullName>
        <defaultValue>false</defaultValue>
        <label>No known entitled relatives</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Relationship_of_the_informant__c</fullName>
        <label>Relationship of the informant</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Stage__c</fullName>
        <label>Stage</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Receipt</fullName>
                    <default>true</default>
                    <label>Receipt</label>
                </value>
                <value>
                    <fullName>Advertising (Internal)</fullName>
                </value>
                <value>
                    <fullName>Investigating</fullName>
                </value>
                <value>
                    <fullName>Advertising (External)</fullName>
                </value>
                <value>
                    <fullName>Awaiting Grant</fullName>
                </value>
                <value>
                    <fullName>Liquidation</fullName>
                </value>
                <value>
                    <fullName>Approval</fullName>
                </value>
                <value>
                    <fullName>Put Away</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>BV Case</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Deceased_name__c</columns>
        <columns>Informant_first_name__c</columns>
        <columns>Informant_last_name__c</columns>
        <columns>Deceased_date_of_birth__c</columns>
        <columns>Deceased_date_of_death__c</columns>
        <columns>Stage__c</columns>
        <columns>OWNER.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>My_Cases</fullName>
        <columns>NAME</columns>
        <columns>Deceased_name__c</columns>
        <columns>Deceased_date_of_birth__c</columns>
        <columns>Deceased_date_of_death__c</columns>
        <columns>Informant_first_name__c</columns>
        <columns>Informant_last_name__c</columns>
        <columns>Stage__c</columns>
        <columns>OWNER.ALIAS</columns>
        <filterScope>Mine</filterScope>
        <label>My Cases</label>
    </listViews>
    <nameField>
        <label>BV Case Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>BV Cases</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>