force-app/main/default/objects/BV_Case__c/fields/Acknowledge_informant__c.field-meta.xml
<CustomField>
    <fullName>Acknowledge_informant__c</fullName>
    <label>Acknowledge informant</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>N/A</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>