force-app/main/default/objects/BV_Case__c/fields/Aliases__c.field-meta.xml
<CustomField>
    <fullName>Aliases__c</fullName>
    <label>Aliases</label>
    <length>255</length>
    <type>Text</type>
</CustomField>