force-app/main/default/objects/BV_Case__c/fields/Allocated__c.field-meta.xml
<CustomField>
    <fullName>Allocated__c</fullName>
    <label>Allocated</label>
    <type>Date</type>
</CustomField>