force-app/main/default/objects/BV_Case__c/fields/Apply_for_Birth_Death_Certs__c.field-meta.xml
<CustomField>
    <fullName>Apply_for_Birth_Death_Certs__c</fullName>
    <label>Apply for Birth &amp; Death Certs</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Y</fullName>
            </value>
            <value>
                <fullName>N</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>