force-app/main/default/objects/BV_Case__c/fields/Assets__c.field-meta.xml
<CustomField>
    <fullName>Assets__c</fullName>
    <label>Assets</label>
    <summaryForeignKey>AssetLiability__c.BV_Case__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>