force-app/main/default/objects/BV_Case__c/fields/Bay_No__c.field-meta.xml
<CustomField>
    <fullName>Bay_No__c</fullName>
    <label>Bay No</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>