force-app/main/default/objects/BV_Case__c/fields/BV1A_Received__c.field-meta.xml
<CustomField>
    <fullName>BV1A_Received__c</fullName>
    <label>BV1A Received</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>N/A</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>