force-app/main/default/objects/BV_Case__c/fields/Calculate_Inheritance_Tax_and_Pay__c.field-meta.xml
<CustomField>
    <fullName>Calculate_Inheritance_Tax_and_Pay__c</fullName>
    <label>Calculate Inheritance Tax and Pay</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>N/A</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>