force-app/main/default/objects/BV_Case__c/fields/Case_officer_s_time_hrs__c.field-meta.xml
<CustomField>
    <fullName>Case_officer_s_time_hrs__c</fullName>
    <label>Case officer&apos;s time (hrs)</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>