force-app/main/default/objects/BV_Case__c/fields/Certainty_Search__c.field-meta.xml
<CustomField>
    <fullName>Certainty_Search__c</fullName>
    <label>Certainty Search</label>
    <type>Date</type>
</CustomField>