force-app/main/default/objects/BV_Case__c/fields/Check_Box__c.field-meta.xml
<CustomField>
    <fullName>Check_Box__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Check Box</label>
    <type>Checkbox</type>
</CustomField>