force-app/main/default/objects/BV_Case__c/fields/COI_Management_Fee__c.field-meta.xml
<CustomField>
    <fullName>COI_Management_Fee__c</fullName>
    <label>COI Management Fee</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>