force-app/main/default/objects/BV_Case__c/fields/Collect_Assets_and_Pay_Liabilities__c.field-meta.xml
<CustomField>
    <fullName>Collect_Assets_and_Pay_Liabilities__c</fullName>
    <label>Collect Assets and Pay Liabilities</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>N/A</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>