force-app/main/default/objects/BV_Case__c/fields/Complex_High_Value__c.field-meta.xml
<CustomField>
    <fullName>Complex_High_Value__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Complex/High Value</label>
    <type>Checkbox</type>
</CustomField>