force-app/main/default/objects/BV_Case__c/fields/Cost_1__c.field-meta.xml
<CustomField>
    <fullName>Cost_1__c</fullName>
    <label>Cost 1</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>