force-app/main/default/objects/BV_Case__c/fields/Cost_of_all_letters_phone_calls_etc__c.field-meta.xml
<CustomField>
    <fullName>Cost_of_all_letters_phone_calls_etc__c</fullName>
    <label>Cost of all letters / phone calls etc. £</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>