force-app/main/default/objects/BV_Case__c/fields/Crown_Share__c.field-meta.xml
<CustomField>
    <fullName>Crown_Share__c</fullName>
    <label>Crown Share</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>N/A</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>