force-app/main/default/objects/BV_Case__c/fields/Crown_Share_Value__c.field-meta.xml
<CustomField>
    <fullName>Crown_Share_Value__c</fullName>
    <label>Crown Share</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>