force-app/main/default/objects/BV_Case__c/fields/Current_Milestone__c.field-meta.xml
<CustomField>
    <fullName>Current_Milestone__c</fullName>
    <label>Current Milestone</label>
    <type>Date</type>
</CustomField>