force-app/main/default/objects/BV_Case__c/fields/Current_Officer__c.field-meta.xml
<CustomField>
    <fullName>Current_Officer__c</fullName>
    <label>Current Officer</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>N/A</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>