force-app/main/default/objects/BV_Case__c/fields/Current_Status_Date__c.field-meta.xml
<CustomField>
    <fullName>Current_Status_Date__c</fullName>
    <label>Current Status Date</label>
    <type>Date</type>
</CustomField>