force-app/main/default/objects/BV_Case__c/fields/Date_4__c.field-meta.xml
<CustomField>
    <fullName>Date_4__c</fullName>
    <label>Date 4</label>
    <type>Date</type>
</CustomField>