force-app/main/default/objects/BV_Case__c/fields/Date_Ad_Approved__c.field-meta.xml
<CustomField>
    <fullName>Date_Ad_Approved__c</fullName>
    <label>Date Ad Approved</label>
    <type>Date</type>
</CustomField>