force-app/main/default/objects/BV_Case__c/fields/Date_Ad_Submitted__c.field-meta.xml
<CustomField>
    <fullName>Date_Ad_Submitted__c</fullName>
    <label>Date Ad Submitted</label>
    <type>Date</type>
</CustomField>