force-app/main/default/objects/BV_Case__c/fields/Date_Advertising_1__c.field-meta.xml
<CustomField>
    <fullName>Date_Advertising_1__c</fullName>
    <label>Date 1</label>
    <type>Date</type>
</CustomField>