force-app/main/default/objects/BV_Case__c/fields/Date_Advertising_3__c.field-meta.xml
<CustomField>
    <fullName>Date_Advertising_3__c</fullName>
    <label>Date 3</label>
    <type>Date</type>
</CustomField>