force-app/main/default/objects/BV_Case__c/fields/Date_Case_Category_Changed_1__c.field-meta.xml
<CustomField>
    <fullName>Date_Case_Category_Changed_1__c</fullName>
    <label>Date Case Category Changed 1</label>
    <type>Date</type>
</CustomField>