force-app/main/default/objects/BV_Case__c/fields/Date_Case_Officer_2__c.field-meta.xml
<CustomField>
    <fullName>Date_Case_Officer_2__c</fullName>
    <label>Date 2</label>
    <type>Date</type>
</CustomField>