force-app/main/default/objects/BV_Case__c/fields/Date_Case_Officer_Current__c.field-meta.xml
<CustomField>
    <fullName>Date_Case_Officer_Current__c</fullName>
    <label>Date Current</label>
    <type>Date</type>
</CustomField>