force-app/main/default/objects/BV_Case__c/fields/Date_Divorced__c.field-meta.xml
<CustomField>
    <fullName>Date_Divorced__c</fullName>
    <label>Date Divorced</label>
    <type>Date</type>
</CustomField>