force-app/main/default/objects/BV_Case__c/fields/Date_Entered_UK__c.field-meta.xml
<CustomField>
    <fullName>Date_Entered_UK__c</fullName>
    <label>Date Entered UK</label>
    <type>Date</type>
</CustomField>