force-app/main/default/objects/BV_Case__c/fields/Date_Kin_Admitted__c.field-meta.xml
<CustomField>
    <fullName>Date_Kin_Admitted__c</fullName>
    <label>Date Kin Admitted</label>
    <type>Date</type>
</CustomField>