force-app/main/default/objects/BV_Case__c/fields/Date_of_Death_Hospital__c.field-meta.xml
<CustomField>
    <fullName>Date_of_Death_Hospital__c</fullName>
    <label>Date of Death @ Hospital</label>
    <type>Date</type>
</CustomField>