force-app/main/default/objects/BV_Case__c/fields/Date_of_Grant_Application__c.field-meta.xml
<CustomField>
    <fullName>Date_of_Grant_Application__c</fullName>
    <label>Date of Grant Application</label>
    <type>Date</type>
</CustomField>