force-app/main/default/objects/BV_Case__c/fields/Date_of_Marriage__c.field-meta.xml
<CustomField>
    <fullName>Date_of_Marriage__c</fullName>
    <label>Date of Marriage</label>
    <type>Date</type>
</CustomField>