force-app/main/default/objects/BV_Case__c/fields/Date_of_Naturalisation__c.field-meta.xml
<CustomField>
    <fullName>Date_of_Naturalisation__c</fullName>
    <label>Date of Naturalisation</label>
    <type>Date</type>
</CustomField>