force-app/main/default/objects/BV_Case__c/fields/Date_Property_Marketed__c.field-meta.xml
<CustomField>
    <fullName>Date_Property_Marketed__c</fullName>
    <label>Date Property Marketed</label>
    <type>Date</type>
</CustomField>