force-app/main/default/objects/BV_Case__c/fields/Date_received_in_File_Store__c.field-meta.xml
<CustomField>
    <fullName>Date_received_in_File_Store__c</fullName>
    <label>Date received in File Store</label>
    <type>Date</type>
</CustomField>