force-app/main/default/objects/BV_Case__c/fields/Date_sent_to_Iron_Mountain__c.field-meta.xml
<CustomField>
    <fullName>Date_sent_to_Iron_Mountain__c</fullName>
    <label>Date sent to Iron Mountain</label>
    <type>Date</type>
</CustomField>