force-app/main/default/objects/BV_Case__c/fields/Date_Summary_2__c.field-meta.xml
<CustomField>
    <fullName>Date_Summary_2__c</fullName>
    <label>Date Summary 2</label>
    <type>Date</type>
</CustomField>