force-app/main/default/objects/BV_Case__c/fields/Date_Summary__c.field-meta.xml
<CustomField>
    <fullName>Date_Summary__c</fullName>
    <label>Date Summary</label>
    <type>Date</type>
</CustomField>