force-app/main/default/objects/BV_Case__c/fields/Date_to_Administer_Collect__c.field-meta.xml
<CustomField>
    <fullName>Date_to_Administer_Collect__c</fullName>
    <label>Date to Administer / Collect</label>
    <type>Date</type>
</CustomField>