force-app/main/default/objects/BV_Case__c/fields/Decision_Making__c.field-meta.xml
<CustomField>
    <fullName>Decision_Making__c</fullName>
    <label>Decision Making?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Y</fullName>
            </value>
            <value>
                <fullName>N</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>