force-app/main/default/objects/BV_Case__c/fields/Deed_and_Title_Verification_Details__c.field-meta.xml
<CustomField>
    <fullName>Deed_and_Title_Verification_Details__c</fullName>
    <label>Deed and Title Verification Details</label>
    <length>255</length>
    <type>Text</type>
</CustomField>