force-app/main/default/objects/BV_Case__c/fields/Deed_and_Title_Verification_Details_Pick__c.field-meta.xml
<CustomField>
    <fullName>Deed_and_Title_Verification_Details_Pick__c</fullName>
    <label>Deed and Title Verification Details Pick</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Y</fullName>
            </value>
            <value>
                <fullName>N</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>