force-app/main/default/objects/BV_Case__c/fields/Details_Complete__c.field-meta.xml
<CustomField>
    <fullName>Details_Complete__c</fullName>
    <label>Details Complete</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>N/A</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>