force-app/main/default/objects/BV_Case__c/fields/Died_at_Address_1__c.field-meta.xml
<CustomField>
    <fullName>Died_at_Address_1__c</fullName>
    <label>Died at Address 1</label>
    <length>255</length>
    <type>Text</type>
</CustomField>