force-app/main/default/objects/BV_Case__c/fields/Died_at_Postcode__c.field-meta.xml
<CustomField>
    <fullName>Died_at_Postcode__c</fullName>
    <label>Died at Postcode</label>
    <length>255</length>
    <type>Text</type>
</CustomField>