force-app/main/default/objects/BV_Case__c/fields/Disbursements__c.field-meta.xml
<CustomField>
    <fullName>Disbursements__c</fullName>
    <label>Disbursements £</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>