force-app/main/default/objects/BV_Case__c/fields/Due_Admin_Checklist_1__c.field-meta.xml
<CustomField>
    <fullName>Due_Admin_Checklist_1__c</fullName>
    <label>Due 1</label>
    <type>Date</type>
</CustomField>