force-app/main/default/objects/BV_Case__c/fields/Due_Admin_Checklist_2__c.field-meta.xml
<CustomField>
    <fullName>Due_Admin_Checklist_2__c</fullName>
    <label>Due 2</label>
    <type>Date</type>
</CustomField>