force-app/main/default/objects/BV_Case__c/fields/Due_Pre_Admin_4__c.field-meta.xml
<CustomField>
    <fullName>Due_Pre_Admin_4__c</fullName>
    <label>Due 4</label>
    <type>Date</type>
</CustomField>