force-app/main/default/objects/BV_Case__c/fields/Due_Pre_Admin__c.field-meta.xml
<CustomField>
    <fullName>Due_Pre_Admin__c</fullName>
    <label>Due</label>
    <type>Date</type>
</CustomField>