force-app/main/default/objects/BV_Case__c/fields/Due_Property_Checklist_3__c.field-meta.xml
<CustomField>
    <fullName>Due_Property_Checklist_3__c</fullName>
    <label>Due 3</label>
    <type>Date</type>
</CustomField>