force-app/main/default/objects/BV_Case__c/fields/Due_Property_Checklist__c.field-meta.xml
<CustomField>
    <fullName>Due_Property_Checklist__c</fullName>
    <label>Due 1</label>
    <type>Date</type>
</CustomField>