force-app/main/default/objects/BV_Case__c/fields/Entered_by__c.field-meta.xml
<CustomField>
    <fullName>Entered_by__c</fullName>
    <label>Entered by</label>
    <length>255</length>
    <type>Text</type>
</CustomField>