force-app/main/default/objects/BV_Case__c/fields/Estate_Agent_Instruction_Post_Admin_Pick__c.field-meta.xml
<CustomField>
    <fullName>Estate_Agent_Instruction_Post_Admin_Pick__c</fullName>
    <label>Estate Agent Instruction Post-Admin Pick</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Y</fullName>
            </value>
            <value>
                <fullName>N</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>