force-app/main/default/objects/BV_Case__c/fields/Family_Maiden_Name__c.field-meta.xml
<CustomField>
    <fullName>Family_Maiden_Name__c</fullName>
    <label>Family Maiden Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>