force-app/main/default/objects/BV_Case__c/fields/Former_ref__c.field-meta.xml
<CustomField>
    <fullName>Former_ref__c</fullName>
    <label>Former ref</label>
    <length>255</length>
    <type>Text</type>
</CustomField>