force-app/main/default/objects/BV_Case__c/fields/Hide_from_HUEL_See_TW__c.field-meta.xml
<CustomField>
    <fullName>Hide_from_HUEL_See_TW__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Hide from HUEL? (See TW)</label>
    <type>Checkbox</type>
</CustomField>