force-app/main/default/objects/BV_Case__c/fields/Hospital_Address_Line_4__c.field-meta.xml
<CustomField>
    <fullName>Hospital_Address_Line_4__c</fullName>
    <label>Hospital Address Line 4</label>
    <length>255</length>
    <type>Text</type>
</CustomField>