force-app/main/default/objects/BV_Case__c/fields/Hospital_Fax_Details__c.field-meta.xml
<CustomField>
    <fullName>Hospital_Fax_Details__c</fullName>
    <label>Hospital Fax Details</label>
    <length>255</length>
    <type>Text</type>
</CustomField>