force-app/main/default/objects/BV_Case__c/fields/Hospital_Telephone_Number__c.field-meta.xml
<CustomField>
    <fullName>Hospital_Telephone_Number__c</fullName>
    <label>Hospital Telephone Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>