force-app/main/default/objects/BV_Case__c/fields/Inheritance_Act_Order_Date__c.field-meta.xml
<CustomField>
    <fullName>Inheritance_Act_Order_Date__c</fullName>
    <label>Inheritance Act Order Date</label>
    <type>Date</type>
</CustomField>