force-app/main/default/objects/BV_Case__c/fields/Jewellery_on_person_Hospital__c.field-meta.xml
<CustomField>
    <fullName>Jewellery_on_person_Hospital__c</fullName>
    <label>Jewellery on person @ Hospital</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Y</fullName>
            </value>
            <value>
                <fullName>N</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>