force-app/main/default/objects/BV_Case__c/fields/Key_Name__c.field-meta.xml
<CustomField>
    <fullName>Key_Name__c</fullName>
    <label>Key Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>