force-app/main/default/objects/BV_Case__c/fields/Kin_Located__c.field-meta.xml
<CustomField>
    <fullName>Kin_Located__c</fullName>
    <label>Kin Located</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>N/A</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>