force-app/main/default/objects/BV_Case__c/fields/Kin_Other_Details__c.field-meta.xml
<CustomField>
    <fullName>Kin_Other_Details__c</fullName>
    <label>Kin / Other Details</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>