force-app/main/default/objects/BV_Case__c/fields/Leasehold_Ground_Rent_Arrangements_Date__c.field-meta.xml
<CustomField>
    <fullName>Leasehold_Ground_Rent_Arrangements_Date__c</fullName>
    <label>Leasehold Ground Rent Arrangements Date</label>
    <type>Date</type>
</CustomField>