force-app/main/default/objects/BV_Case__c/fields/Lifespan_of_Case__c.field-meta.xml
<CustomField>
    <fullName>Lifespan_of_Case__c</fullName>
    <label>Lifespan of case (Months)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>