force-app/main/default/objects/BV_Case__c/fields/Litigation_Costs_inc_VAT__c.field-meta.xml
<CustomField>
    <fullName>Litigation_Costs_inc_VAT__c</fullName>
    <label>Litigation Costs £ (inc. VAT)</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>