force-app/main/default/objects/BV_Case__c/fields/Money_Passed_to_CNA__c.field-meta.xml
<CustomField>
    <fullName>Money_Passed_to_CNA__c</fullName>
    <label>Money Passed to CNA</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>