force-app/main/default/objects/BV_Case__c/fields/MP_Address_Line_3__c.field-meta.xml
<CustomField>
    <fullName>MP_Address_Line_3__c</fullName>
    <label>MP Address Line 3</label>
    <length>255</length>
    <type>Text</type>
</CustomField>