force-app/main/default/objects/BV_Case__c/fields/MP_Postcode__c.field-meta.xml
<CustomField>
    <fullName>MP_Postcode__c</fullName>
    <label>MP Postcode</label>
    <length>255</length>
    <type>Text</type>
</CustomField>