force-app/main/default/objects/BV_Case__c/fields/Net_Value__c.field-meta.xml
<CustomField>
    <fullName>Net_Value__c</fullName>
    <label>Net Value £</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>