force-app/main/default/objects/BV_Case__c/fields/No_of_letters_phone_calls_etc_in__c.field-meta.xml
<CustomField>
    <fullName>No_of_letters_phone_calls_etc_in__c</fullName>
    <label>No. of letters / phone calls etc in</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>