force-app/main/default/objects/BV_Case__c/fields/Old_File_No__c.field-meta.xml
<CustomField>
    <fullName>Old_File_No__c</fullName>
    <label>Old File No</label>
    <length>255</length>
    <type>Text</type>
</CustomField>